added a brand new backend service along with a brand new frontend service for API calls and an administrator panel to add a weather alert